--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       </div>
       <div class="content">
         <h3>I'm Mohit</h3>
-        <span class="tag">Full Stack Developer</span>
+        <span class="tag">Frontend Developer</span>
 
         <p>I am a Frontend Developer based in Greater Noida, India, with a strong passion for creating user-friendly and
           responsive web interfaces. I have completed my graduation from DDU. I specialize in
@@ -225,7 +225,7 @@
       </div>
       <div class="box">
         <div class="image">
-          <img draggable="false" src="./assets/images/educat/school.jpg" alt="">
+          <img draggable="false" src="./assets/images/educat/highschool.jpg" alt="">
         </div>
         <div class="content">
           <h3>Intermediate I.Com | Accounts</h3>
