--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
             <p>A fully responsive website built with Bootstrap classes.
 Clean layout, mobile-friendly design, and smooth user experience.</p>
             <div class="btns">
-              <a href="https://web-mohitsharma.github.io/Using-Bootstarp/Tech.html" class="btn" target="_blank"><i
+              <a href="https://web-mohitsharma.github.io/Using-Bootstarp/index.html" class="btn" target="_blank"><i
                   class="fas fa-eye"></i> View</a>
               <a href="https://github.com/Web-MohitSharma/Using-Bootstarp.git" class="btn" target="_blank">Code <i
                   class="fas fa-code"></i></a>
@@ -270,12 +270,11 @@ Clean layout, mobile-friendly design, and smooth user experience.</p>
             <h3>Portfolio Website</h3>
           </div>
           <div class="desc">
-            <p>A simple and fast Notes App to quickly jot down ideas and tasks.
-              Clean UI with easy add, edit, and delete features.</p>
+            <p>A responsive portfolio website showcasing my projects and skills, with a clean design and smooth, mobile-friendly layout.</p>
             <div class="btns">
-              <a href="#" class="btn" target="_blank"><i
+              <a href="https://Web-MohitSharma.github.io/Mohit-Portfolio" class="btn" target="_blank"><i
                   class="fas fa-eye"></i> View</a>
-              <a href="https://github.com/Web-MohitSharma/Portfolio-Website.git" class="btn" target="_blank">Code <i
+              <a href="https://github.com/Web-MohitSharma/Mohit-Portfolio.git" class="btn" target="_blank">Code <i
                   class="fas fa-code"></i></a>
             </div>
           </div>
@@ -355,18 +354,18 @@ Get current temperature, location-based forecast, and more.</p>
       </div>
     </div>
 
-    <div class="viewall">
+    <!-- <div class="viewall">
       <a href="/projects" class="btn"><span>View All</span>
         <i class="fas fa-arrow-right"></i>
       </a>
-    </div>
+    </div> -->
 
   </section>
   <!-- work project section ends -->
 
   <!-- experience section starts -->
 
-  <!-- <section class="experience" id="experience">
+  <section class="experience" id="experience">
 
     <h2 class="heading"><i class="fas fa-briefcase"></i> Experience </h2>
 
@@ -378,82 +377,14 @@ Get current temperature, location-based forecast, and more.</p>
             <h2>Self Employed</h2>
           </div>
           <div class="desc">
-            <h3>Full Stack Developer</h3>
-            <p>Oct 2021 - present</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="container left">
-        <div class="content">
-          <div class="tag">
-            <h2>Mapstreak Flyseas</h2>
-          </div>
-          <div class="desc">
-            <h3>Web Developer | Internship</h3>
-            <p>June 2021 - Dec 2021</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="container right">
-        <div class="content">
-          <div class="tag">
-            <h2>The Spark Foundation</h2>
-          </div>
-          <div class="desc">
-            <h3>Website Developer | Internship</h3>
-            <p>May 2021 - June 2021</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="container left">
-        <div class="content">
-          <div class="tag">
-            <h2>The Spark Foundation</h2>
-          </div>
-          <div class="desc">
-            <h3>Mobile Application Developer | Internship</h3>
-            <p>April 2021 - May 2021</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="container right">
-        <div class="content">
-          <div class="tag">
-            <h2>Frshr Technologies</h2>
-          </div>
-          <div class="desc">
-            <h3>Wordpress Developer | Internship</h3>
-            <p>April 2021 - April 2021</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="container left">
-        <div class="content">
-          <div class="tag">
-            <h2>WonderingBlog</h2>
-          </div>
-          <div class="desc">
-            <h3>Web Development & SEO | Internship</h3>
-            <p>March 2021 - April 2021</p>
+            <h3>Frontend Developer</h3>
+            <p>March 2025 - present</p>
           </div>
         </div>
       </div>
     </div>
 
-    <div class="morebtn">
-      <a href="/experience" class="btn"><span>View All</span>
-        <i class="fas fa-arrow-right"></i>
-      </a>
-    </div>
-
-    </div>
-
-  </section> -->
+  </section>
 
   <!-- experience section ends -->
 
